changed according to recommendations